; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/fsutil/extr_common.c_PrintErrorMessage.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/fsutil/extr_common.c_PrintErrorMessage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FORMAT_MESSAGE_ALLOCATE_BUFFER = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"Error: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"Error: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PrintErrorMessage(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @FORMAT_MESSAGE_ALLOCATE_BUFFER, align 4
  %5 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* %2, align 4
  %8 = bitcast i32** %3 to i32*
  %9 = call i64 @FormatMessageW(i32 %6, i32* null, i32 %7, i32 0, i32* %8, i32 0, i32* null)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 @_T(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %14 = load i32*, i32** %3, align 8
  %15 = ptrtoint i32* %14 to i32
  %16 = call i32 @_ftprintf(i32 %12, i32 %13, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @LocalFree(i32* %17)
  br label %24

19:                                               ; preds = %1
  %20 = load i32, i32* @stderr, align 4
  %21 = call i32 @_T(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %22 = load i32, i32* %2, align 4
  %23 = call i32 @_ftprintf(i32 %20, i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %19, %11
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @FormatMessageW(i32, i32*, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @_ftprintf(i32, i32, i32) #1

declare dso_local i32 @_T(i8*) #1

declare dso_local i32 @LocalFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
